samples/_failures_safe/1761635921_780232_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c86ca314.c: In function ‘main’:
./samples/SAFE/__tmp_c86ca314.c:199:12: error: expected ‘)’ at end of input
  199 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_c86ca314.c:199:5: error: expected declaration or statement at end of input
  199 |     if (len
      |     ^~
